DNM: add some debugging to PGLog::read_log divergent_prior case

See: http://tracker.ceph.com/issues/17916
Signed-off-by: Samuel Just <sjust@redhat.com>